--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
             <img id="img-sport-selected" src="" class="img-responsive icon-sports">
         </div>
         <div class="content-block">
-          <p><a href="team_add.html" class="button button-big button-fill button-raised color-teal">Make New Team</a></p>
-          <p><a href="team_list.html" class="button button-big button-fill button-raised color-teal">Choose Existing</a></p>
+          <p><a id="btn-make-new-team" href="team_add.html" class="button button-big button-fill button-raised color-teal"></a></p>
+          <p><a id="btn-choose-existing" href="team_list.html" class="button button-big button-fill button-raised color-teal"></a></p>
         </div>
       </div>
     </div>
