--- a/team_list.html
+++ b/team_list.html
@@ -5,7 +5,7 @@
         <div class="left">
           <a href="home.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Team List</div>
+        <div id="lbl-team-list" class="center"></div>
         <div class="right">
           <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
         </div>
