--- a/administrator_list.html
+++ b/administrator_list.html
@@ -5,7 +5,7 @@
         <div class="left">
           <a href="#" id="btn-admin-back-tm" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Administrator List</div>
+        <div id="lbl-administrator-list" class="center"></div>
         <div class="right"></div>
       </div>
     </div>
