--- a/team_management.html
+++ b/team_management.html
@@ -22,11 +22,11 @@
     <div class="page-content">
       <div class="ks-grid">
         <div class="row no-gutter">
-          <div class="col-50"><a id="lbl-team-management-roster" href="#" id="btn-roster"><img src="img/flat-roster.png" class="img-responsive icon-sports" alt="" /></a></div>
+          <div class="col-50"><a href="#" id="btn-roster"><img src="img/flat-roster.png" class="img-responsive icon-sports" alt="" /></a></div>
           <div class="col-50"><a href="#" id="btn-tournament"><img src="img/flat-calendar.png" class="img-responsive icon-sports" alt="" /></a></div>
         </div>
         <div class="row no-gutter">
-          <div class="col-100"><a id="lbl-team-management-statistics" href="team_stats.html" id="btn-statistics"><img src="img/flat-stats.ico" class="img-responsive icon-sports" alt=""/></a></div>
+          <div class="col-100"><a href="team_stats.html" id="btn-statistics"><img src="img/flat-stats.ico" class="img-responsive icon-sports" alt=""/></a></div>
         </div>
       </div>
     </div>
