--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -9,11 +9,11 @@
     </div>
     <div class="toolbar tabbar tabbar-scrollable theme-indigo" style="padding-top:190px;">
       <div class="toolbar-inner">
-        <a href="#detail" style="padding-top:145px;" class="tab-link active">Detail</a>
-        <a href="#roster" style="padding-top:145px;" class="tab-link">Roster</a>
-        <a href="#stats" style="padding-top:145px;" class="tab-link">Stats</a>
-        <a href="#fine" style="padding-top:145px;" class="tab-link">Fine Box</a>
-        <a href="#mvp" style="padding-top:145px;" class="tab-link">MVP</a>
+        <a id="lbl-tournament-detail" href="#detail" style="padding-top:145px;" class="tab-link active"></a>
+        <a id="lbl-tournament-detail-roster" href="#roster" style="padding-top:145px;" class="tab-link"></a>
+        <a id="lbl-tournament-detail-stats" href="#stats" style="padding-top:145px;" class="tab-link"></a>
+        <a id="lbl-tournament-detail-fine-box" href="#fine" style="padding-top:145px;" class="tab-link"></a>
+        <a id="lbl-tournament-detail-mvp" href="#mvp" style="padding-top:145px;" class="tab-link"></a>
       </div>
     </div>
     <div id="div-add-tournament-roster">
