--- a/account_list.html
+++ b/account_list.html
@@ -5,7 +5,7 @@
         <div class="left">
           <a href="#" id="btn-account-back-tm" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Accounts List</div>
+        <div id="lbl-account-list" class="center"></div>
         <div class="right"></div>
       </div>
     </div>
