--- a/roster_add.html
+++ b/roster_add.html
@@ -5,12 +5,12 @@
         <div class="left">
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Add Roster</div>
+        <div id="lbl-add-roster" class="center"></div>
         <div class="right"></div>
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
-        <div class="content-block-title">Details</div>
+        <div id="lbl-roster-add-image" class="content-block-title"></div>
         <div onclick="getRosterImage();">
           <img id="roster-image" src="img/profile.jpg" width="115px" height="115px" class="img-circle fit center">
         </div>
@@ -19,7 +19,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title label">Roster name</div>
+                  <div id="lbl-roster-add-name" class="item-title label"></div>
                   <div class="item-input">
                     <input id="txt-roster-name" type="text" placeholder="Full name"/>
                   </div>
@@ -29,7 +29,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title label">Position</div>
+                  <div id="lbl-roster-add-position" class="item-title label"></div>
                   <div class="item-input">
                     <input id="txt-roster-position" type="text" placeholder="Position"/>
                   </div>
@@ -39,7 +39,7 @@
           </ul>
         </div>
         <div class="content-block">
-          <p><a href="#" id="btn-add-roster" class="button button-big button-fill button-raised color-teal">Continue</a></p>
+          <p><a href="#" id="btn-add-roster" class="button button-big button-fill button-raised color-teal"></a></p>
         </div>
     </div>
     </div>
