--- a/roster_detail.html
+++ b/roster_detail.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-        <div class="center">Roster Detail</div>
+        <div id="lbl-roster-detail" class="center"></div>
         <div class="right">
           <a href="#" id="btn-edit-roster-detail" class="link icon-only">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
