--- a/roster_list.html
+++ b/roster_list.html
@@ -5,7 +5,7 @@
         <div class="left">
           <a href="team_management.html" class="link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Roster List</div>
+        <div id="lbl-roster-list" class="center"></div>
         <div class="right">
           <a href="choose_sports.html" class="link icon-only"><i class="fa fa-home" aria-hidden="true"></i></a>
         </div>
