--- a/tournament_add.html
+++ b/tournament_add.html
@@ -5,12 +5,12 @@
         <div class="left">
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Add Tournament</div>
+        <div id="lbl-add-tournament" class="center"></div>
         <div class="right"></div>
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
-        <div class="content-block-title">Image</div>
+        <div id="lbl-add-tournament-image" class="content-block-title"></div>
         <div class="list-block inputs-list" style="padding-bottom:0px; margin-bottom:0px;">
           <ul>
             <li>
@@ -23,14 +23,14 @@
             </li>
           </ul>
         </div>
-        <div class="content-block-title" style="padding-top:0px;">Details</div>
+        <div id="lbl-add-tournament-details" class="content-block-title" style="padding-top:0px;"></div>
         <div class="list-block inputs-list">
           <ul>
             <li>
               <div class="item-content">
                 <div class="item-media"><i class="fa fa-futbol-o" aria-hidden="true"></i></div>
                 <div class="item-inner"> 
-                  <div class="item-title label">Opponent</div>
+                  <div id="lbl-add-tournament-opponent" class="item-title label"></div>
                   <div class="item-input">
                     <textarea id="txt-opponent-name" class="resizable" placeholder="Opponent" required="required" ></textarea>
                   </div>
@@ -41,7 +41,7 @@
                 <div class="item-content">
                   <div class="item-media"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
                    <div class="item-inner">
-                      <div class="item-title label">Location</div>
+                      <div id="lbl-add-tournament-location" class="item-title label"></div>
                       <div class="item-input">
                          <textarea id="txt-tournament-location" class="resizable" placeholder="Location" required="required" ></textarea>
                          <!-- <input id="txt-tournament-location" type="text" placeholder="Location" required="required" /> -->
@@ -53,7 +53,7 @@
               <div class="item-content">
                 <div class="item-media"><i class="fa fa-calendar" aria-hidden="true"></i></div>
                 <div class="item-inner"> 
-                  <div class="item-title label">Date</div>
+                  <div id="lbl-add-tournament-date" class="item-title label"></div>
                   <div class="item-input">
                     <input id="txt-tournament-date" type="datetime-local" placeholder="Date"/>
                   </div>
@@ -64,7 +64,7 @@
               <div class="item-content">
                 <div class="item-media"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
                 <div class="item-inner"> 
-                  <div class="item-title label">Description</div>
+                  <div id="lbl-add-tournament-description" class="item-title label"></div>
                   <div class="item-input">
                     <textarea id="txt-tournament-description" class="resizable" placeholder="Description"></textarea>
                   </div>
@@ -74,7 +74,7 @@
           </ul>
         </div>
         <div class="content-block">
-          <p><a href="#" id="btn-add-tournament" class="button button-big button-fill button-raised color-teal">Continue</a></p>
+          <p><a href="#" id="btn-add-tournament" class="button button-big button-fill button-raised color-teal"></a></p>
         </div>
     </div>
     </div>
