update with danish words

--- a/fine_add.html
+++ b/fine_add.html
@@ -5,7 +5,7 @@
         <div class="left">
           <a href="#" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Create Fine</div>
+        <div id="lbl-create-fine" class="center"></div>
         <div class="right">
           <a href="#" id="btn-add-fine" class="back link icon-only">
             <i class="fa fa-check" aria-hidden="true"></i>
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:50px;">
-        <div class="content-block-title">Details</div>
+        <div id="lbl-fine-add-details" class="content-block-title"></div>
         <div class="list-block inputs-list">
           <ul>
             <li>
@@ -24,14 +24,14 @@
               </select>
               <div class="item-content">
                 <div class="item-inner">
-                  <div class="item-title">Roster</div>
+                  <div id="lbl-fine-add-roster" class="item-title"></div>
                 </div>
               </div></a>
             </li>
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title label">Fine</div>
+                  <div id="lbl-fine-add-fine" class="item-title label"></div>
                   <div class="item-input">
                     <textarea id="txt-fine-description" class="resizable" placeholder="Fine"></textarea>
                   </div>
@@ -41,7 +41,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title label">Price</div>
+                  <div id="lbl-fine-add-price" class="item-title label"></div>
                   <div class="item-input">
                     <input id="txt-fine-price" type="number" placeholder="Price"/>
                   </div>
