--- a/fine_detail.html
+++ b/fine_detail.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-        <div class="center">Fine Detail</div>
+        <div id="lbl-fine-detail" class="center"></div>
         <div class="right"></div>
       </div>
     </div>
@@ -12,11 +12,11 @@
         <img id="fine-detail-image" src="" class="img-circle fit center" style="width:150px; height: 150px;" />
         <center><p id="fine-detail-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
       </div>
-      <div class="content-block-title">Description</div>
+      <div id="lbl-fine-detail-description" class="content-block-title"></div>
       <div class="content-block" style="margin-bottom:0px;">  
         <p id="fine-detail-description"></p>
       </div>
-      <div class="content-block-title" style="padding-top:0px; margin-top:0px;">Price</div>
+      <div id="lbl-fine-detail-price" class="content-block-title" style="padding-top:0px; margin-top:0px;"></div>
       <div class="content-block">
         <p id="fine-detail-price"></p>
       </div>
