--- a/team_stats.html
+++ b/team_stats.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-        <div class="center">Team Statistics</div>
+        <div id="lbl-team-stats" class="center"></div>
         <div class="right">
         </div>
       </div>
