--- a/tournament_roster_list.html
+++ b/tournament_roster_list.html
@@ -5,7 +5,7 @@
         <div class="left">
           <a href="#" id="btn-tournament-detail-back" class="back link icon-only"><i class="icon icon-back"></i></a>
         </div>
-        <div class="center">Roster List</div>
+        <div id="lbl-tournament-roster-list" class="center"></div>
         <div class="right"></div>
       </div>
     </div>
