--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
       }
     </style>
   </head>
-  <body class="theme-green">
+  <body onload="onLoad()" class="theme-green">
   <div class="panel-overlay"></div>
   <div class="panel panel-left panel-cover">
      <div class="pages navbar-fixed">
