--- a/roster_tournament_stats.html
+++ b/roster_tournament_stats.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-        <div class="center">Roster Statistics</div>
+        <div id="lbl-roster-statistics" class="center"></div>
         <div class="right">
           <a href="#" id="btn-edit-roster-stats" class="link icon-only">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
@@ -12,8 +12,8 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div style="width:100%; background-color:#008B8B; padding-top:15px; padding-bottom:15px;">
-        <img id="roster-image" src="" class="img-circle fit center" style="width:150px; height: 150px;" />
+      <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
+        <img id="roster-image" src="" class="img-circle fit center" style="width:120px; height: 120px;" />
         <center><p id="roster-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
         <center><p id="roster-position" style="color:white; margin-top:0px;"></p></center>
       </div>
@@ -22,7 +22,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Points</div>
+                  <div id="lbl-roster-tournament-points" class="item-title"></div>
                   <div id="roster-points" class="item-after"></div>
                 </div>
               </div>
@@ -30,7 +30,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Assist</div>
+                  <div id="lbl-roster-tournament-assists" class="item-title"></div>
                   <div id="roster-assists" class="item-after"></div>
                 </div>
               </div>
@@ -38,7 +38,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Fouls</div>
+                  <div id="lbl-roster-tournament-fouls" class="item-title"></div>
                   <div id="roster-fouls" class="item-after"></div>
                 </div>
               </div>
@@ -46,7 +46,7 @@
             <li>
               <div class="item-content">
                 <div class="item-inner"> 
-                  <div class="item-title">Votes</div>
+                  <div id="lbl-roster-tournament-votes" class="item-title"></div>
                   <div id="roster-votes" class="item-after"></div>
                 </div>
               </div>
