--- a/edit_tournament_stats.html
+++ b/edit_tournament_stats.html
@@ -3,7 +3,7 @@
     <div class="navbar theme-indigo">
       <div class="navbar-inner">
         <div class="left"><a href="#" class="back link icon-only"><i class="icon icon-back"></i></a></div>
-        <div class="center">Edit Statistics</div>
+        <div id="lbl-edit-team-statistics" class="center"></div>
         <div class="right">
           <a href="#" id="btn-update-tournament-stats" class="link icon-only">
             <i class="fa fa-check" aria-hidden="true"></i>
@@ -18,7 +18,7 @@
           <li>
             <div class="item-content">
               <div class="item-inner"> 
-                <div class="item-title label">Points</div>
+                <div id="lbl-edit-team-points" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-team-points" type="number" placeholder="Points" value=""/>
                 </div>
@@ -28,7 +28,7 @@
           <li>
             <div class="item-content">
               <div class="item-inner"> 
-                <div class="item-title label">Assists</div>
+                <div id="lbl-edit-team-assists" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-team-assists" type="number" placeholder="Assists" value=""/>
                 </div>
@@ -38,7 +38,7 @@
           <li>
             <div class="item-content">
               <div class="item-inner"> 
-                <div class="item-title label">Fouls</div>
+                <div id="lbl-edit-team-fouls" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-team-fouls" type="number" placeholder="Fouls" value=""/>
                 </div>
@@ -53,7 +53,7 @@
           <li>
             <div class="item-content">
               <div class="item-inner"> 
-                <div class="item-title label">Points</div>
+                <div id="lbl-edit-opp-points" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-opponent-points" type="number" placeholder="Points" value=""/>
                 </div>
@@ -63,7 +63,7 @@
           <li>
             <div class="item-content">
               <div class="item-inner"> 
-                <div class="item-title label">Assists</div>
+                <div id="lbl-edit-opp-assists" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-opponent-assists" type="number" placeholder="Assists" value=""/>
                 </div>
@@ -73,7 +73,7 @@
           <li>
             <div class="item-content">
               <div class="item-inner"> 
-                <div class="item-title label">Fouls</div>
+                <div id="lbl-edit-opp-fouls" class="item-title label"></div>
                 <div class="item-input">
                   <input id="txt-edit-opponent-fouls" type="number" placeholder="Fouls" value=""/>
                 </div>
