--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -24,7 +24,7 @@
     </div>
     <div class="tabs-swipeable-wrap">
       <div class="tabs">
-        <div id="stats" class="page-content tab" style="padding-top:220px;">
+        <div id="stats" class="page-content tab active" style="padding-top:220px;">
         <div class="ks-grid">
             <div class="content-block">
                <div class="row">
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div id="detail" class="page-content tab active" style="padding-top:240px;">
+        <div id="detail" class="page-content tab" style="padding-top:240px;">
           <!-- <div class="content-block-title" style="padding-top:0px;">Details</div> -->
           <div id="lbl-tournament-detail-opponent" class="content-block-title"></div>
           <div class="content-block" style="margin-bottom:0px;">
