--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+    <script type="text/javascript" src="cordova.js"></script>
 
     <style>
       body {
