--- a/main.html
+++ b/main.html
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="cordova.js"></script>
+    <!-- <script type="text/javascript" src="cordova.js"></script> -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC62QbeQTbzSZBDeWcd05hRJm1mhTXaSuI &libraries=places"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/framework7.js"></script>
