--- a/main.html
+++ b/main.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <script type="text/javascript" src="cordova.js"></script>
 
     <style>
       body {
@@ -23,7 +22,7 @@
       }
     </style>
   </head>
-  <body onload="onLoad()" class="theme-green">
+  <body class="theme-green">
   <div class="panel-overlay"></div>
   <div class="panel panel-left panel-cover">
      <div class="pages navbar-fixed">
@@ -143,8 +142,8 @@
             </div>
         </div>
     </div>
-
-    <!-- <script type="text/javascript" src="cordova.js"></script> -->
+    
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC62QbeQTbzSZBDeWcd05hRJm1mhTXaSuI &libraries=places"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/framework7.js"></script>
