--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
     <style>
       body {
         font-family: 'Source Sans Pro', sans-serif;
-      }
+      
     </style>
   </head>
-  <body onload="onLoad()" class="theme-green">
+  <body class="theme-green">
   <div class="panel-overlay"></div>
   <div class="panel panel-left panel-cover">
      <div class="pages navbar-fixed">
