--- a/fine_detail.html
+++ b/fine_detail.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div style="width:100%; background-color:#008B8B; padding-top:15px; padding-bottom:15px;">
+      <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
         <img id="fine-detail-image" src="" class="img-circle fit center" style="width:150px; height: 150px;" />
         <center><p id="fine-detail-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
       </div>
