--- a/main.html
+++ b/main.html
@@ -108,7 +108,8 @@
                         <img src="img/envp-logo.png" class="img-responsive img-center" >
                     </div>
                     <div class="content-block">
-                      <p><a href="#" onclick="FBLogin();" class="button button-big button-fill button-raised color-indigo">Facebook</a></p>
+                      <!-- <p><a href="#" onclick="FBLogin();" class="button button-big button-fill button-raised color-indigo">Facebook</a></p> -->
+                      <center><a href="" onclick="FBLogin();" class="link icon-only"><img src="img/btn-fb-login.png" alt="" class="img-responsive" style="height:48px;"/></a></center>
                     </div>
                     <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
                       <ul>
