--- a/edit_roster_tournament_stats.html
+++ b/edit_roster_tournament_stats.html
@@ -12,11 +12,11 @@
       </div>
     </div>
     <div class="page-content" style="padding-top:56px;">
-      <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
+      <!-- <div style="width:100%; background-color:#34495E; padding-top:55px; padding-bottom:10px;">
         <img id="edit-roster-image" src="" class="img-circle fit center" style="width:120px; height: 120px;" />
         <center><p id="edit-roster-name" style="font-size:20px; font-weight:bold; color:white; margin-bottom:0px;"></p></center>
         <center><p id="edit-roster-position" style="color:white; margin-top:0px;"></p></center>
-      </div>
+      </div> -->
       <div class="list-block inputs-list">
         <ul>
           <li>
