--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
       <div class="page-content center-outer" >
         <div class="center-inner">
           <div class="login-screen-title">
-              <img src="img/envyp_logo.png" class="img-responsive img-center" >
+              <img src="img/envp-logo.png" class="img-responsive img-center" >
           </div>
           <br />
           <div class="list-block inset inputs-list" style="width:100%;margin-left:auto;margin-right:auto;">
