--- a/signup.html
+++ b/signup.html
@@ -35,6 +35,19 @@
                   </div>
                 </div>
               </li>
+              <li>
+                  <div class="item-content">
+                      <label class="label-checkbox item-content">
+                        <input id="chkbox-terms" type="checkbox" name="ks-checkbox" value="Books"/>
+                        <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
+                      </label>
+                      <div class="item-inner">
+                        <div class="item-title">
+                          <font style="color:#404040;">I agree to the </font><a id="btn-terms" href="#" class="link icon-only" style="color:#0000FF;">Terms and Conditions</a>
+                        </div>
+                      </div>
+                  </div>
+              </li>
             </ul>
           </div>
           <div class="content-block">
