--- a/main.html
+++ b/main.html
@@ -142,8 +142,44 @@
               </div>
             </div>
         </div>
-    </div>
+    </div>  
     
+    <!-- Terms & Condition -->
+    <div class="popup popup-terms">
+        <div class="navbar theme-indigo">
+          <div class="navbar-inner">
+            <div class="left"><a href="#" id="btn-close-terms" class="link icon-only"><i class="icon icon-back"></i></a></div>
+            <div class="center">Terms & Conditions</div>
+            <div class="right"></div>
+          </div>
+        </div>
+        <div class="content-block-title">Envp App End User License Agreement</div>
+            <div class="content-block">
+              <p>This End User License Agreement (“Agreement”) is between you and Envp and governs use of this app made available through the Apple App Store. By installing the Envp App, you agree to be bound by this Agreement and understand that there is no tolerance for objectionable content. If you do not agree with the terms and conditions of this Agreement, you are not entitled to use the Envp App.</p>
+              <p>In order to ensure Envp provides the best experience possible for everyone, we strongly enforce a no tolerance policy for objectionable content. If you see inappropriate content, please use the “Report as offensive” feature found under each post.</p>
+              <p>1. Parties</p>
+              <p>This Agreement is between you and Envp only, and not Apple, Inc. (“Apple”). Notwithstanding the foregoing, you acknowledge that Apple and its subsidiaries are third party beneficiaries of this Agreement and Apple has the right to enforce this Agreement against you. Envp, not Apple, is solely responsible for the Envp App and its content.</p>
+              <p>2. Privacy</p>
+              <p>Envp may collect and use information about your usage of the Envp App, including certain types of information from and about your device. Envp may use this information, as long as it is in a form that does not personally identify you, to measure the use and performance of the Envp App.</p>
+              <p>3. Limited License</p>
+              <p>Envp grants you a limited, non-exclusive, non-transferable, revocable license to use theEnvp App for your personal, non-commercial purposes. You may only use theEnvp App on Apple devices that you own or control and as permitted by the App Store Terms of Service.</p>
+              <p>4. Age Restrictions</p>
+              By using the Envp App, you represent and warrant that (a) you are 17 years of age or older and you agree to be bound by this Agreement; (b) if you are under 17 years of age, you have obtained verifiable consent from a parent or legal guardian; and (c) your use of the Envp App does not violate any applicable law or regulation. Your access to the Envp App may be terminated without warning if Envp believes, in its sole discretion, that you are under the age of 17 years and have not obtained verifiable consent from a parent or legal guardian. If you are a parent or legal guardian and you provide your consent to your child’s use of the Envp App, you agree to be bound by this Agreement in respect to your child’s use of the Envp App.</p>
+              <p>5. Objectionable Content Policy</p>
+              Content may not be submitted to Envp, who will moderate all content and ultimately decide whether or not to post a submission to the extent such content includes, is in conjunction with, or alongside any, Objectionable Content. Objectionable Content includes, but is not limited to: (i) sexually explicit materials; (ii) obscene, defamatory, libelous, slanderous, violent and/or unlawful content or profanity; (iii) content that infringes upon the rights of any third party, including copyright, trademark, privacy, publicity or other personal or proprietary right, or that is deceptive or fraudulent; (iv) content that promotes the use or sale of illegal or regulated substances, tobacco products, ammunition and/or firearms; and (v) gambling, including without limitation, any online casino, sports books, bingo or poker.</p>
+              <p>6. Warranty</p>
+              <p>Envp disclaims all warranties about the Envp App to the fullest extent permitted by law. To the extent any warranty exists under law that cannot be disclaimed, Envp, not Apple, shall be solely responsible for such warranty.</p>
+              <p>7. Maintenance and Support</p>
+              <p>Envp does provide minimal maintenance or support for it but not to the extent that any maintenance or support is required by applicable law, Envp, not Apple, shall be obligated to furnish any such maintenance or support.</p>
+              <p>8. Product Claims</p>
+              <p>Envp, not Apple, is responsible for addressing any claims by you relating to the Envp App or use of it, including, but not limited to: (i) any product liability claim; (ii) any claim that the Envp App fails to conform to any applicable legal or regulatory requirement; and (iii) any claim arising under consumer protection or similar legislation. Nothing in this Agreement shall be deemed an admission that you may have such claims.</p>
+              <p>9. Third Party Intellectual Property Claims</p>
+              <p>Envp shall not be obligated to indemnify or defend you with respect to any third party claim arising out or relating to the Envp App. To the extent Envp is required to provide indemnification by applicable law, Envp, not Apple, shall be solely responsible for the investigation, defense, settlement and discharge of any claim that the Envp App or your use of it infringes any third party intellectual property right.</p>
+            </div>
+          </div>
+    </div>
+    <!-- End of Terms & Condition -->
+
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxk72Dwc6EjFcJZ4sdcAIyNev1289u5q4&libraries=places"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
