--- a/main.html
+++ b/main.html
@@ -14,12 +14,13 @@
     <link rel="stylesheet" href="css/envyp.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="icon" href="img/icon.png">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+    <link href="css/font.css" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet"> -->
 
     <style>
       body {
         font-family: 'Source Sans Pro', sans-serif;
-      
+      }
     </style>
   </head>
   <body class="theme-green">
