--- a/team_add.html
+++ b/team_add.html
@@ -14,7 +14,7 @@
     <div class="page-content" style="padding-top:50px;">
         <div id="lbl-team-add-upload-image" class="content-block-title"></div>
         <div onclick="getTeamImage();">
-          <img id="team-image" src="img/icon-basketball.png" width="115px" height="115px" class="img-circle fit center">
+          <img id="team-image" src="img/roster.png" width="115px" height="115px" class="img-circle fit center">
         </div>
         <div id="lbl-team-add-details" class="content-block-title"></div>
         <div class="list-block inputs-list">
