--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -133,7 +133,7 @@
               </ul>
             </div>
             <div class="content-block">
-              <p><a href="#" id="btn-submit-vote" class="button button-big button-fill button-raised color-teal">Vote</a></p>
+              <p><a href="#" id="btn-submit-vote" class="button button-big button-fill button-raised color-teal"></a></p>
             </div>
           </div>
           <div id="div-vote-result">
