--- a/main.html
+++ b/main.html
@@ -137,6 +137,7 @@
                     <div class="content-block">
                       <p><a href="#" id="btn-email-login" class="button button-big button-fill button-raised color-teal">Log in with Email</a></p>
                       <p><a href="#" id="btn-signup-page" class="button button-big button-fill button-raised color-teal">Sign up with Email</a></p>
+                      <p><center><a href="#" id="btn-forgot-pass">Forgot Password?</a></center></p>
                     </div>
                   </div>
                 </div>
