--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -1,6 +1,19 @@
 <div class="pages">
   <div data-page="tournament-detail" class="page navbar-fixed toolbar-fixed" >
     <div id="tournament-background-image" class="navbar" style="height:200px; background-size: 100% 100%; -webkit-filter: grayscale(0.5);">
+      <div class="ks-grid" style="margin-top:50px;">
+        <div class="content-block">
+          <div class="row">
+            <div class="col-45"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/></div>
+            <div class="col-10"><p style="color:white;">Final</p></div>
+            <div class="col-45"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/></div>
+          </div>
+          <!-- <div class="row" style="margin-top:0px; padding-top:0px;">
+            <div class="col-50" style="margin-top:0px; padding-top:0px;"><p style="color:white; margin-top:0px;">60</p></div>
+            <div class="col-50"><p style="color:white; margin-top:0px;">56</p></div>
+          </div> -->
+        </div>
+      </div>
       <div class="navbar-inner">
         <div class="left" style="padding-bottom:150px;"><a href="tournament_list.html" class="link icon-only"><i class="icon icon-back"></i></a></div>
         <!-- <div id="tournament-name" class="center" style="padding-top:150px;padding-left:5px;"></div> -->
