--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -3,14 +3,29 @@
     <div id="tournament-background-image" class="navbar" style="height:200px; background-size: 100% 100%; -webkit-filter: grayscale(0.5);">
       <div class="ks-grid" style="margin-top:50px;">
         <div class="content-block">
-          <div class="row">
-            <div class="col-45"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/></div>
-            <div class="col-10"><p style="color:white;">Final</p></div>
-            <div class="col-45"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/></div>
+          <div class="row no-gutter">
+            <div class="col-33"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/><p style="color:white;margin-top:0px;">120</p></div>
+            <div class="col-33"><p style="color:white;">Final</p></div>
+            <div class="col-33"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/><p style="color:white;margin-top:0px;">115</p></div>
           </div>
           <!-- <div class="row" style="margin-top:0px; padding-top:0px;">
             <div class="col-50" style="margin-top:0px; padding-top:0px;"><p style="color:white; margin-top:0px;">60</p></div>
             <div class="col-50"><p style="color:white; margin-top:0px;">56</p></div>
+          </div> -->
+          <!-- <div class="row">
+            <div class="col-50">.col-50</div>
+            <div class="col-50">.col-50</div>
+          </div>
+          <div class="row">
+            <div class="col-25">.col-25</div>
+            <div class="col-25">.col-25</div>
+            <div class="col-25">.col-25</div>
+            <div class="col-25">.col-25</div>
+          </div>
+          <div class="row">
+            <div class="col-33">.col-33</div>
+            <div class="col-33">.col-33</div>
+            <div class="col-33">.col-33</div>
           </div> -->
         </div>
       </div>
