--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -4,9 +4,17 @@
       <div class="ks-grid" style="margin-top:50px;">
         <div class="content-block">
           <div class="row no-gutter">
-            <div class="col-33"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/><p style="color:white;margin-top:0px;">120</p></div>
-            <div class="col-33"><p style="color:white;">Final</p></div>
-            <div class="col-33"><img src="img/roster.png" class="img-circle" style="width:100px; height:100px;"/><p style="color:white;margin-top:0px;">115</p></div>
+            <div class="col-33" style="padding:0px; margin:0px;"><img src="img/roster.png" class="img-circle" style="width:90px; height:90px;"/></div>
+            <div class="col-33" style="padding:0px; margin:0px;">
+              <p style="color:white; margin-bottom:0px;">Final</p>
+              <p style="color:white; margin-top:0px;"><font size="3">120 - 115</font></p>
+            </div>
+            <div class="col-33" style="padding:0px; margin:0px;"><img src="img/roster.png" class="img-circle" style="width:90px; height:90px;"/></div>
+          </div>
+          <div class="row no-gutter">
+            <div class="col-33" style="padding:0px; margin:0px;"><p style="color:white; margin-top:0px;"><font size="2">Chicago Bulls</font></p></div>
+            <div class="col-33" style="padding:0px; margin:0px;"></div>
+            <div class="col-33" style="padding:0px; margin:0px;"><p style="color:white; margin-top:0px;"><font size="2">Cleveland Cavaliers</font></p></div>
           </div>
           <!-- <div class="row" style="margin-top:0px; padding-top:0px;">
             <div class="col-50" style="margin-top:0px; padding-top:0px;"><p style="color:white; margin-top:0px;">60</p></div>
@@ -58,40 +66,40 @@
                <div class="row">
                   <div class="col-100">
                     <div class="row">
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="team-name" style="font-weight:bold;"></p>
                       </div>
-                      <div class="col-20">
+                      <div class="col-20" style="padding:0px; margin:0px;">
                         <p><b id="lbl-tournament-detail-versus"></b></p>
                       </div>
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="opponent-name" style="font-weight:bold;"></p>
                       </div>
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="team-points"></p>
                       </div>
-                      <div class="col-20">
+                      <div class="col-20" style="padding:0px; margin:0px;">
                         <p><b id="lbl-tournament-detail-score"></b></p>
                       </div>
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="opponent-points"></p>
                       </div>
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="team-assists"></p>
                       </div>
-                      <div class="col-20">
+                      <div class="col-20" style="padding:0px; margin:0px;">
                         <p><b id="lbl-tournament-detail-assist"></b></p>
                       </div>
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="opponent-assists"></p>
                       </div>
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="team-fouls"></p>
                       </div>
-                      <div class="col-20">
+                      <div class="col-20" style="padding:0px; margin:0px;">
                         <p><b id="lbl-tournament-detail-foul"></b></p>
                       </div>
-                      <div class="col-40">
+                      <div class="col-40" style="padding:0px; margin:0px;">
                         <p id="opponent-fouls"></p>
                       </div>
                     </div>
