--- a/tournament_detail.html
+++ b/tournament_detail.html
@@ -6,15 +6,11 @@
           <div class="row no-gutter">
             <div class="col-33" style="padding:0px; margin:0px;"><img src="img/roster.png" class="img-circle" style="width:90px; height:90px;"/></div>
             <div class="col-33" style="padding:0px; margin:0px;">
-              <p style="color:white; margin-bottom:0px;">Final</p>
-              <p style="color:white; margin-top:0px;"><font size="3">120 - 115</font></p>
+              <p id="tournament-status" style="color:white; margin-bottom:0px;"></p>
+              <p style="color:white; margin-top:0px;"><font id="tournament-score" size="3"></font></p>
+              <p style="color:white; margin-top:0px;"><font id="tournament-win-lose" size="2"></font></p>
             </div>
             <div class="col-33" style="padding:0px; margin:0px;"><img src="img/roster.png" class="img-circle" style="width:90px; height:90px;"/></div>
-          </div>
-          <div class="row no-gutter">
-            <div class="col-33" style="padding:0px; margin:0px;"><p style="color:white; margin-top:0px;"><font size="2">Chicago Bulls</font></p></div>
-            <div class="col-33" style="padding:0px; margin:0px;"></div>
-            <div class="col-33" style="padding:0px; margin:0px;"><p style="color:white; margin-top:0px;"><font size="2">Cleveland Cavaliers</font></p></div>
           </div>
           <!-- <div class="row" style="margin-top:0px; padding-top:0px;">
             <div class="col-50" style="margin-top:0px; padding-top:0px;"><p style="color:white; margin-top:0px;">60</p></div>
@@ -39,8 +35,10 @@
       </div>
       <div class="navbar-inner">
         <div class="left" style="padding-bottom:150px;"><a href="tournament_list.html" class="link icon-only"><i class="icon icon-back"></i></a></div>
-        <!-- <div id="tournament-name" class="center" style="padding-top:150px;padding-left:5px;"></div> -->
-        <div class="right"></div>
+        <div id="tournament-name" class="center" style="padding-top:150px;"></div>
+        <div class="right">
+          <a href="#" style="padding-bottom:150px;" class="link  icon-only popop-tournament-options"><i class="icon icon-bars"></i></a>
+        </div>
       </div>
     </div>
     <div class="toolbar tabbar tabbar-scrollable theme-indigo" style="padding-top:190px;">
@@ -52,6 +50,19 @@
         <a id="lbl-tournament-detail-mvp" href="#mvp" style="padding-top:145px;" class="tab-link"></a>
       </div>
     </div>
+    <!-- Pop-over -->
+ <!--    <div class="popover popover-links">
+      <div class="popover-angle"></div>
+      <div class="popover-inner">
+        <div class="list-block">
+          <ul>
+            <li><a href="#" class="list-button item-link">End Game</a></li>
+            <li><a href="#" class="list-button item-link">End Voting</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
+    <!-- Pop-over -->
     <div id="div-add-tournament-roster">
       <a id="btn-add-tournament-roster" href="tournament_roster_list.html" class="floating-button color-pink"><i class="icon icon-plus"></i></a>
     </div>
@@ -187,3 +198,5 @@
     </div>
   </div>
 </div>
+
+
